wordpress/wp-content/themes/Eris/assets/sass/global/_navigation.scss
// @author Carl Albrecht-Buehler

$arrow-height: 3px;

// General class for creating a dropdown or "dropup" menu
.dropmenu {
  > li {
    float: left;
    position: relative;
    > span, a {
      display: block;
      font-weight: bold;
      text-align: center;
      cursor: pointer;
    }
    // Hover reveals drop menu
    &:hover { 
      ul {
        left: 0;
      }
    }
  }
  // Styling for drop menu
  ul {
    width: 99%;
    position: absolute;
    left: -9999px;
    z-index: 100;
    li {
      float: none;
      width: 100%;
      a {
        color: sears( secondary-link );
        font-weight: normal;
        text-align: left;
        padding-left: 1em;
        padding-right: .3em;
        &:visited {
          color: sears( secondary-link );
        }
      }
    }
  }
}

#navigation {
  width:960px;
  margin:0 auto;
  // Necessary for the tooltip to be global. Will be removed after 90 days.
  #forum_tooltip {
	width: 250px; 
	position: absolute; 
	top: 43px;
	background: none repeat scroll 0% 0% rgb(255, 255, 255); 
	border: 3px solid rgb(221, 221, 221); 
	padding: 30px 21px 5px;
	z-index: 101; 
	-webkit-border-radius: 6px;
	border-radius: 6px; 
	-webkit-box-shadow: 2px 4px 6px #A8A8A8;
	box-shadow: 2px 4px 6px #A8A8A8; 
	font-size: 16px;
	display:none;	
	p {
		margin-bottom: 10px;
	}
	input[type='checkbox'] {
		margin-right: 5px;
	}
	.close {
		position: absolute; 
		right: 6px; 
		top: 3px;
		cursor: pointer;
		font-size: 10px;
		font-weight: bold;
	}
	.tick {
		position: absolute; 
		left: 67px; 
		top: -6px; 
		background: none repeat scroll 0px 0px rgb(255, 255, 255); 
		height: 11px; 
		width: 11px; 
		border-right: 3px solid rgb(221, 221, 221); 
		border-top: 3px solid rgb(221, 221, 221);
		border-radius: 2px; 
		-webkit-border-radius: 6px;
		transform: rotate(-45deg);
		transform-origin: 0px 100% 0px; 
		-webkit-transform: rotate(-45deg);
		-webkit-transform-origin: 2px;
	}
	.banner_new {		
		height: 63px; 
		width: 63px; 
		position: absolute; 
		top: -7px; 
		left: -7px;
	}
	#new_modal_form {
		font-size: 12px;
		#message_hide {
			vertical-align: sub;
		}
	}
  }
}
.no-boxshadow #forum_tooltip {
	
	/*
	// This contains the color of the shadow in the CSS3 syntax
	background: #999;

    // This contains the blur-radius in the CSS3 syntax
	zoom: 1;
	filter: progid:DXImageTransform.Microsoft.DropShadow(OffX=2, OffY=4, Color=#999999),
			progid:DXImageTransform.Microsoft.Shadow(Color=#cccccc, Strength=1, Direction=90),
			progid:DXImageTransform.Microsoft.Shadow(Color=#cccccc, Strength=1, Direction=180);

    // You must remove the border in IE, since it will be replaced in the next rule
	border: none;
	*/
}

.no-csstransforms .tick {
	display: none;
	
	/*
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0);
	*/
}

.sears .banner_new{
	background: url("../img/forums/sears_newCornerImg.png") no-repeat scroll 0px 0px transparent; 
}

.kmart .banner_new{
	background: url("../img/forums/kmart_newCornerImg.png") no-repeat scroll 0px 0px transparent; 
}


// Modify dropmenu for the footer
#footer_nav.dropmenu {
  > li {
    > span, a {
      padding-top: .66em;
      padding-bottom: .66em;
      span {
        background-repeat: no-repeat;
        padding-right: 16px;
        display: inline-block;
        //width: 90%;
      }
      @include sprite-position( "span", right, ( $nav-sprite-period * ( -3 ) ) );
    }
    // Make the footer item appear above the footer bar ("drop-up")
    ul {
      bottom: 100%;
    }
  }
  // Modifications to hovering menu for footer
  ul {
    li {
      &:hover {
        // background: none;
      }
    }
  }
}

